Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.02***

****	Fix endclass keyword parsing.  [David Plumb]

* Verilog::Language 3.020 2007/12/03

**	Add SystemVerilog logic types.  [Thomas Ziller]
	(SystemVerilog support is still a work in progress).

***	Add SystemVerilog operators += ## @@ :: etc.

***	Add specify operators &&& => *>.  [Mark Nodine]

***	Add SystemVerilog times (10ns, etc).

****	Fix concatenates in for loop assignments.  [Mark Nodine]

****	Fix endmodule/endfunc callback line numbers.

* Verilog::Language 3.013 2007/10/18

****	Fix parsing module #(parameter x,y) declarations. [Oleg Rodionov]

****	Fix parsing system functions with empty parens. [Oleg Rodionov]

****	Fix Verilog::Netlist errors having wrong line number. [Oleg Rodionov]

* Verilog::Language 3.012 2007/09/10

**	Added Verilog::EditFiles module and vsplitmodule example.

* Verilog::Language 3.011 2007/07/31

***	Added event trigger -> operator. [Mark Nodine]

****	Remove preprocessor adding newlines before `line. [Mark Nodine]

* Verilog::Language 3.010 2007/07/18

***	Added Parser::endparse callback. [Mark Nodine]

***	Added SigParser::endmodule, endtaskfunc, and endcell callbacks.

****	Fix attachment of comments to proceeding cells. [David Chinnery]

* Verilog::Language 3.002 2007/07/16

***	Find functions now search backslash escaped names.  [David Chinnery]

***	Fix vrename breakage in 3.00* releases.  [David Price]

****	Fix SigParser::comment to call Parser::Comment. [Mark Nodine]

****	Fix Parser::unreadback to always return value. [Mark Nodine]

****	Fix g++ bug giving "out of memory" on Cygwin.  [Pongstorn]

* Verilog::Language 3.001 2007/06/20

****	Support V2K function/task argument lists.

****	Fix Preprocessor dropping some `line directives.  [Mark Nodine]
