@@ -205,6 +205,8 @@ verilog/parser_bugs.v:205: SIGNAL_DECL  'reg' 'a' '' '' '' ''
 verilog/parser_bugs.v:205: SIGNAL_DECL  'reg' 'b' '' '' '' ''
 verilog/parser_bugs.v:206: SIGNAL_DECL  'reg' 'c' '[1:0]' '' '' ''
 verilog/parser_bugs.v:211: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:213: MODULE  'module' 'colonslash' undef '0'
+verilog/parser_bugs.v:222: ENDMODULE  'endmodule'
 verilog/pinorder.v:006: MODULE  'module' 'pinorder4' undef '0'
 verilog/pinorder.v:007: SIGNAL_DECL  'wire' 'b_i' '' '' '' ''
 verilog/pinorder.v:008: SIGNAL_DECL  'wire' 'd_o' '' '' '' ''
