@@ -7,6 +7,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Fix endclass keyword parsing.  [David Plumb]
 
+****	Fix "://" parsing as ":/" operator instead of comment. [Mark Nodine]
+
 * Verilog::Language 3.020 2007/12/03
 
 **	Add SystemVerilog logic types.  [Thomas Ziller]
